# xmrig-cuda

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  config.json
cmake/: CUDA-Version.cmake  CUDA.cmake  flags.cmake
res/: app.rc
src/: CryptonightR.cu  CudaCryptonightR_gen.cpp  cryptonight.h  cuda_aes.hpp  cuda_blake.hpp  cuda_core.cu  cuda_device.hpp  cuda_extra.cu  cuda_extra.h  cuda_fast_div_heavy.hpp  cuda_fast_int_math_v2.hpp  cuda_groestl.hpp  cuda_jh.hpp  cuda_keccak.hpp  cuda_skein.hpp  version.h  xmrig-cuda.cpp  xmrig-cuda.h
src/AstroBWT/dero/: AstroBWT.cu  BWT.h
src/AstroBWT/dero_he/: AstroBWT_v2.cu  BWT.h  salsa20.h  sha3.h
src/KawPow/raven/: CudaKawPow_gen.cpp  CudaKawPow_gen.h  KawPow.cu  KawPow.h  KawPow_dag.h
src/RandomX/: aes_cuda.hpp  blake2b_cuda.hpp  hash.hpp  randomx.cu  randomx_cuda.hpp
src/RandomX/arqma/: configuration.h
src/RandomX/graft/: configuration.h
src/RandomX/keva/: configuration.h
src/RandomX/loki/: randomx_loki.cu
src/RandomX/lozzax/: configuration.h  randomx_lozzax.cu
src/RandomX/monero/: configuration.h
src/RandomX/wownero/: configuration.h
src/RandomX/yada/: configuration.h  randomx_yada.cu
src/crypto/cn/: CnAlgo.h
src/crypto/cn/r/: variant4_random_math.h
src/crypto/common/: Algorithm.cpp  Algorithm.h
